--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,7 +7,7 @@
     <title>Deploy Nodejs with Render</title>
     <style>
         h1{
-            color: red;
+            color: rgb(180, 10, 10);
         }
     </style>
 </head>
